# CUDA-CFD

./: .gitignore  CMakeLists.txt
Builds/CMake/: CXXCompileOptions.cmake
Examples/HelloCuda/: CMakeLists.txt  ProblemSet.f90  main.f90
Sources/Core/: CMakeLists.txt
Sources/Core/Chemistry/: ChemistryBase.f90  Species.f90
Sources/Core/Grid/: DataGrid.f90  FaceCenteredGrid3D.f90  Grid.f90
Sources/Core/Math/Container/: Array.f90  Vector.f90
Sources/Core/Math/FDM/: DifferenceBase.f90
Sources/Core/Parameters/: Constants.f90  MetricBase.f90
Sources/Core/Solver/: SolverBase.f90
Sources/Core/Solver/AdvectionSolver/: AdvectionBase.f90
Sources/Core/Solver/DiffusionSolver/: DiffusionBase.f90  DiffusionLegacyImpl.f90  DiffusionSolver.f90  LegacyTransport.f90
Sources/Core/Test/: test.f90
Sources/Core/Utils/: DebugHelper.f90  test.f90
